--- a/app/src/main/res/layout/activity_accuse.xml
+++ b/app/src/main/res/layout/activity_accuse.xml
@@ -28,7 +28,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
-            android:background="@drawable/btn_close" />
+            android:background="@drawable/btn_close"
+            android:onClick="close"/>
 
         <View
             android:layout_below="@id/BoardNameTV"
@@ -43,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="bottom">
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/accsue1"
@@ -183,12 +184,12 @@
             android:textColor="#000000"
             android:textSize="20sp"
             android:layout_marginLeft="20dp"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="10dp"/>
 
         <EditText
             android:id="@+id/reasonET"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/input_background"
             android:hint="내용을 입력해 주세요"
@@ -200,9 +201,9 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_gravity="right"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/btn_normal_gray"
             android:text="@string/accuse"
             android:textSize="18sp" />
