--- a/app/src/main/res/layout/activity_qna.xml
+++ b/app/src/main/res/layout/activity_qna.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,7 @@
     android:background="#FFFFFF">
 
     <RelativeLayout
+        android:id="@+id/titleLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -29,7 +30,8 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
             android:background="@drawable/back"
-            android:onClick="close"/>
+            android:onClick="close"
+            />
 
         <View
             android:layout_below="@id/titleTV"
@@ -38,32 +40,37 @@
             android:background="#000000" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        <TextView
+            android:visibility="gone"
+            android:layout_marginHorizontal="15dp"
+            android:layout_below="@id/titleLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="동아리 이름"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/groupNameTV"/>
 
         <ListView
-
+            android:layout_below="@id/groupNameTV"
+            android:layout_above="@id/btnLayout"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="5dp"
             android:id="@+id/boardLV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:divider="@drawable/dash_line"></ListView>
+            android:divider="@drawable/dash_line"
+            android:layout_marginBottom="10dp"></ListView>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:gravity="center"
-            >
 
             <LinearLayout
+                android:id="@+id/btnLayout"
+                android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_horizontal">
 
@@ -71,7 +78,6 @@
                     android:id="@+id/postBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/btn_color"
@@ -86,17 +92,11 @@
                     android:id="@+id/searchBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/btn_normal_gray"
                     android:paddingHorizontal="30dp"
                     android:text="@string/search"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp" />
-
-            </LinearLayout>
         </LinearLayout>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
