동아리 가입 신청 조회 추가 및 Firebase 관련 클래스 모듈화

--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -60,12 +60,13 @@
     </RelativeLayout>
 
     <EditText
-        android:layout_below="@id/titleLayout"
         android:id="@+id/titleET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/titleLayout"
         android:background="#FFFFFF"
         android:hint="제목"
+        android:inputType="text"
         android:padding="15dp"
         android:textSize="20sp" />
     <View
