--- a/app/src/main/res/drawable/btn_normal_gray.xml
+++ b/app/src/main/res/drawable/btn_normal_gray.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:bottom="1dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp">
-        <shape android:shape="rectangle" >
-            <corners android:radius="5dp" />
-            <solid android:color="#BEBEBE" />
-        </shape>
-    </item>
-
-</layer-list>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/btn_normal"
+        android:state_pressed="true" />
+    <item android:drawable="@drawable/btn_normal"
+        android:state_focused="true" />
+    <item android:drawable="@drawable/btn_normal_gray_normal" />
+</selector>
