--- a/app/src/main/res/layout/activity_join_request.xml
+++ b/app/src/main/res/layout/activity_join_request.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JoinRequestActivity"
+    tools:context=".JoinRequest.JoinRequestActivity"
     android:background="#FFFFFF">
 
 
@@ -32,7 +32,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
-            android:background="@drawable/btn_close" />
+            android:background="@drawable/btn_close"
+            android:onClick="close"/>
 
         <View
             android:layout_below="@id/requirementTV"
