--- a/app/src/main/res/layout/activity_edit_my_information.xml
+++ b/app/src/main/res/layout/activity_edit_my_information.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditMyInformationActivity"
+    tools:context=".Account.EditMyInformationActivity"
     android:orientation="vertical"
     android:background="#FFFFFF"
     android:gravity="center_horizontal">
