--- a/app/src/main/res/layout/activity_federation_notice.xml
+++ b/app/src/main/res/layout/activity_federation_notice.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FederationNoticeActivity"
+    tools:context=".Board.FederationNoticeActivity"
     android:orientation="vertical"
     android:background="#FFFFFF">
 
@@ -28,6 +28,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
             android:background="@drawable/back"
+            android:onClick="close"
             />
 
         <View
