--- a/app/src/main/res/layout/activity_introduce.xml
+++ b/app/src/main/res/layout/activity_introduce.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IntroduceActivity"
+    tools:context=".Board.IntroduceActivity"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:background="#FFFFFF">
@@ -28,7 +28,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
-            android:background="@drawable/back" />
+            android:background="@drawable/back"
+            android:onClick="close"/>
 
         <View
             android:layout_below="@id/groupIntroduce"
