--- a/app/src/main/res/layout/activity_join_requset_log_detail.xml
+++ b/app/src/main/res/layout/activity_join_requset_log_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JoinRequsetLogDetailActivity">
+    tools:context=".JoinRequest.JoinRequsetLogDetailActivity">
 
     <RelativeLayout
         android:id="@+id/titleLayout"
@@ -224,7 +224,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="9"
-                    android:gravity="center"
+
                     android:text="어쩌구 저쩌구"
                     android:textColor="#000000"
                     android:textSize="18sp" />
@@ -243,14 +243,15 @@
         android:layout_marginBottom="20dp">
 
         <Button
-            android:layout_marginHorizontal="10dp"
-            android:layout_weight="1"
+            android:id="@+id/updateBtn"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_weight="1"
             android:background="@drawable/btn_normal_gray"
             android:text="@string/edit"
             android:textColor="#FFFFFF"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/removeBtn"
