--- a/app/src/main/res/layout/activity_my_information.xml
+++ b/app/src/main/res/layout/activity_my_information.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyInformationActivity"
+    tools:context=".Account.MyInformationActivity"
     android:orientation="vertical"
     android:background="#FFFFFF">
 
