게시글 및 가입신청 업데이트 추가

--- a/app/src/main/res/layout/activity_join_request.xml
+++ b/app/src/main/res/layout/activity_join_request.xml
@@ -87,12 +87,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="80dp"
             android:layout_weight="1"
             android:background="@drawable/input_background"
             android:inputType="textPersonName"
             android:padding="5dp"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:gravity="center"/>
 
     </LinearLayout>
 
@@ -117,15 +117,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="80dp"
             android:layout_weight="1"
             android:background="@drawable/input_background"
             android:inputType="phone"
             android:padding="5dp"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:gravity="center"/>
     </LinearLayout>
 
-        <!--연락처 입력-->
+        <!--학번 입력-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -146,15 +146,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="80dp"
                 android:layout_weight="1"
                 android:background="@drawable/input_background"
                 android:inputType="numberDecimal"
                 android:padding="5dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:gravity="center"/>
         </LinearLayout>
 
-        <!--연락처 입력-->
+        <!--학과 입력-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -175,15 +175,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="80dp"
                 android:layout_weight="1"
                 android:background="@drawable/input_background"
                 android:inputType="textPersonName"
                 android:padding="5dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:gravity="center"/>
         </LinearLayout>
 
-        <!--연락처 입력-->
+        <!--나이 입력-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -204,15 +204,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="80dp"
                 android:layout_weight="1"
                 android:background="@drawable/input_background"
                 android:inputType="numberDecimal"
                 android:padding="5dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:gravity="center"/>
         </LinearLayout>
 
-        <!--연락처 입력-->
+        <!--가능한 시간 입력-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -233,11 +233,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="80dp"
                 android:layout_weight="1"
                 android:background="@drawable/input_background"
+                android:inputType="text"
                 android:padding="5dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:gravity="center"/>
         </LinearLayout>
 
         <!--연락처 입력-->
