--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -73,14 +73,30 @@
                     android:textColor="#000000"
                     android:textSize="20sp" />
 
-                <Button
-                    android:id="@+id/functionBtn"
-                    android:layout_width="60dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="20dp"
-                    android:background="@drawable/btn_gray_round"
-                    android:textSize="16sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="right"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:text="삭제"
+                        android:visibility="gone"
+                        android:id="@+id/removeBtn"
+                        android:layout_width="60dp"
+                        android:layout_height="30dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/btn_gray_round"
+                        android:textSize="16sp" />
+
+                    <Button
+                        android:id="@+id/functionBtn"
+                        android:layout_width="60dp"
+                        android:layout_height="30dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/btn_gray_round"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/contentTV"
