--- a/app/src/main/res/layout/activity_federation_notice.xml
+++ b/app/src/main/res/layout/activity_federation_notice.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,7 @@
     android:background="#FFFFFF">
 
     <RelativeLayout
+        android:id="@+id/titleLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -38,41 +39,31 @@
             android:background="#000000" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <ListView
+            android:layout_above="@id/searchBtn"
+            android:layout_below="@id/titleLayout"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="5dp"
             android:id="@+id/boardLV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:divider="@drawable/dash_line"></ListView>
+            android:divider="@drawable/dash_line"
+            android:layout_marginBottom="10dp"></ListView>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:gravity="center"
-            >
+    <Button
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="10dp"
+        android:id="@+id/searchBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/btn_normal_gray"
+        android:paddingHorizontal="30dp"
+        android:text="@string/search"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
-            <Button
-                android:id="@+id/searchBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/btn_normal_gray"
-                android:paddingHorizontal="30dp"
-                android:text="@string/search"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
