--- a/app/src/main/res/layout/activity_load.xml
+++ b/app/src/main/res/layout/activity_load.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoadActivity"
+    tools:context=".etc.LoadActivity"
     android:background="#FFFFFF">
 
     <!--로고 출력 레이아웃-->
