이미지 수정 활성화

--- a/app/src/main/res/layout/activity_edit_introduce.xml
+++ b/app/src/main/res/layout/activity_edit_introduce.xml
@@ -39,6 +39,7 @@
     </RelativeLayout>
 
     <ImageView
+        android:clickable="true"
         android:id="@+id/GroupIcon"
         android:layout_width="120dp"
         android:layout_height="120dp"
