--- a/app/src/main/res/layout/activity_introduce.xml
+++ b/app/src/main/res/layout/activity_introduce.xml
@@ -39,6 +39,8 @@
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/GroupIcon"
+        android:src="@drawable/group_alt"
         android:layout_marginTop="10dp"
         android:layout_width="120dp"
         android:layout_height="120dp"
